--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ingloriousdragons.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: IngloriousDrag1
+twitter_url: https://twitter.com/IngloriousDrag1
+instagram_url: https://www.instagram.com/inglorious_dragons/
+twitch_url: https://www.twitch.tv/inglorious_dragons
+youtube_url: https://www.youtube.com/channel/UCIfCms-3CC1usVFYvjX6WdA
 
 # Build settings
 markdown: kramdown
